# tauri-app

./: package.json  tsconfig.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/client/: api.rs  mod.rs
src-tauri/src/config/: config.yaml  mod.rs  yaml.rs
src/assets/: font.less
src/components/: VideoPlayer.vue
src/router/: index.ts
src/views/: AboutView.vue  HomeView.vue  PlayerView.vue  VideosView.vue
